<resources>
    <string name="app_name">eBread</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Dimenticato la password?</string>
    <string name="btn_link_to_register">Non un membro? Registrati ad eBread ora!</string>
    <string name="btn_sign_out">Esci</string>
    <string name="btn_remove">Cancellazione account</string>
    <string name="lbl_forgot_password">Dimenticato la password?</string>
    <string name="forgot_password_msg">Hai bisogno solo della email di registrazione per recuperare la password.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Registrami</string>
    <string name="btn_link_to_login">Già registrato. Autenticami!</string>
    <string name="minimum_password">Password troppo corta, inserisci almeno 8 caratteri!</string>
    <string name="auth_failed">Autenticazione fallita, controlla email e password oppure registrati!</string>
    <string name="hint_enter_a_message">Inserisci un messaggio...</string>
    <string name="action_delete">Cancella</string>
    <string name="action_create_chat">Crea chat</string>
    <string name="action_addressbook">Rubrica</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_delete_friends">Cancella contatti</string>
    <string name="action_personal_settings">Impostazioni personali</string>
    <string name="action_voice_settings">Impostazioni voce di sintesi</string>
    <string name="action_text_settings">Impostazioni visualizzazione</string>
    <string name="action_delete_picture">Elimina Avatar</string>
    <string name="action_update_picture">Aggiorna Avatar</string>
    <string name="action_logout">Esci</string>
    <string name="hint_enter_nickname">Inserisci nickname</string>
    <string name="hint_enter_name">Inserisci nome</string>
    <string name="hint_enter_surname">Inserisci cognome</string>
    <string name="action_update_profile_settings">Salva Informazioni</string>
    <string name="action_update_voice_settings">Salva Impostazioni</string>
    <string name="action_preview_settings">Ascolta Esempio</string>
    <string name="switch_highlight">Mostra evidenziazione</string>
    <string name="switch_voice">Riproduci voce</string>
    <string name="switch_persistent_highlight">Evidenziazione persistente</string>
    <string-array name="voices_array">
        <item>istc-speaker_internazionale-hsmm</item>
        <item>istc-lucia-hsmm</item>
    </string-array>
    <string-array name="voices_languages_array">
        <item>it</item>
    </string-array>
    <string-array name="voices_speed_array">
        <item>molto lenta</item>
        <item>lenta</item>
        <item>normale</item>
        <item>veloce</item>
        <item>super veloce</item>
    </string-array>
    <string-array name="highlight_delay_type_array">
        <item>-1000</item>
        <item>-800</item>
        <item>-600</item>
        <item>-400</item>
        <item>-200</item>
        <item>0</item>
        <item>200</item>
        <item>400</item>
        <item>600</item>
        <item>800</item>
        <item>1000</item>
    </string-array>
    <string-array name="highlight_type_array">
        <item>lettera</item>
        <item>parola</item>
    </string-array>
    <string-array name="colors_array">
        <item>Blue Grey</item>
        <item>Grey</item>
        <item>Deep Orange</item>
        <item>Yellow</item>
        <item>Light Green</item>
        <item>Light Blue</item>
        <item>Red</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string-array name="fonts_array">
        <item>Roboto</item>
        <item>OpenDyslexicRegular</item>
        <item>OpenDyslexicBold</item>
        <item>Helvetica</item>
        <item>Verdana</item>
        <item>Courier</item>
    </string-array>
    <string-array name="sizes_array">
        <item>Piccolo</item>
        <item>Medio</item>
        <item>Normale</item>
        <item>Grande</item>
        <item>Molto Grande</item>
    </string-array>
</resources>