<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_addressbook"
        android:icon="@drawable/ic_addressbook"
        android:title="@string/action_addressbook"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_personal_settings"
                android:title="@string/action_personal_settings"/>
            <item
                android:id="@+id/action_voice_settings"
                android:title="@string/action_voice_settings"/>
            <item
                android:id="@+id/action_text_settings"
                android:title="@string/action_text_settings"/>
        </menu>
    </item>>
</menu>