<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="swevoq.ebread.com.Chat.View.Settings.VoiceSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10pt"
            android:paddingLeft="5pt"
            android:paddingRight="5pt"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/firstSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10pt"
                android:paddingBottom="10pt"
                android:text="Voce di default"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleziona voce:"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:padding="5pt"/>
                <Spinner
                    android:id="@+id/defaultVoiceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10pt"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:id="@+id/secondSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10pt"
                android:paddingBottom="10pt"
                android:text="Lingua voce di sintesi"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleziona lingua:"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:padding="5pt"/>
                <Spinner
                    android:id="@+id/languageVoiceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10pt"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:id="@+id/thirdSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10pt"
                android:paddingBottom="10pt"
                android:text="Velocità voce di sintesi"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleziona velocità:"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:padding="5pt"/>
                <Spinner
                    android:id="@+id/speedVoiceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10pt"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:id="@+id/fourthSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10pt"
                android:paddingBottom="10pt"
                android:text="Tipo di ritardo evidenziazione"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ritarda evidenziazione:"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:padding="5pt"/>
                <Spinner
                    android:id="@+id/highlightDelayTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10pt"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:id="@+id/fifthSeparator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10pt"
                android:paddingBottom="10pt"
                android:text="Tipo di evidenziazione"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Evidenziazione per:"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:padding="5pt"/>
                <Spinner
                    android:id="@+id/highlightTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10pt"
                    android:textAlignment="center"/>
            </LinearLayout>
            <Switch
                android:id="@+id/highlightSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_highlight"
                android:textStyle="bold"
                android:paddingTop="10pt"
                android:paddingBottom="10pt" />
            <Switch
                android:id="@+id/voiceSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_voice"
                android:textStyle="bold"
                android:paddingBottom="10pt" />
            <Switch
                android:id="@+id/persistentHighlightSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_persistent_highlight"
                android:textStyle="bold"
                android:paddingBottom="10pt" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/previewVoiceSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:text="@string/action_preview_settings"
                    android:textColor="@android:color/black"/>
                <Button
                    android:id="@+id/updateVoiceSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:text="@string/action_update_voice_settings"
                    android:textColor="@android:color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
